--- a/web-app/css/page/module/Assets/dependencyAnalyzer.sass
+++ b/web-app/css/page/module/Assets/dependencyAnalyzer.sass
@@ -5,11 +5,3 @@ div.content-wrapper
         margin-left: 0px !important
         td.labelColumn
           position: initial !important
-      div.floating
-        z-index: 1033 !important
-    div.tabInner
-      div.graphContainer
-        &.fullscreen
-          z-index: 1032
-        div#controlPanel, div#legendDivId
-          z-index: 1032 !important
